update to square image

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,5 @@
 /*
+ *= require jquery.jcrop
  *= require_tree .
  *= require_self
  */
@@ -31,4 +32,4 @@ a.dropdown-toggle
   margin-bottom: 0px
 
 .explain
-  padding: 20px 100px 
+  padding: 20px 100px
