--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -72,3 +72,9 @@ $teal: #5E8D9C
 .better-with-friends
   margin-bottom: 35px
   color: grey
+
+.red
+  color: $red
+
+.green
+  color: darken($light_lime, 25%)
