--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -39,6 +39,8 @@
         <div class="col-md-6 form-section text-center">
           <%= f.file_field :img, :label => "Select Image to Upload ",
           class: "file"%> </br>
+          <em> Making a sample account and don't have a picture?
+            Leave this blank and we'll select one for you!</em>
         </div>
       </div>
     <%= f.submit "Submit", class: "btn btn-default btn-lg" %>
