--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -9,7 +9,12 @@
         new_observation_path%>
       </h3>
   <h1> Let's find <%= current_dog.name %> some dates! </h2>
-    <h3> Click LEFT or Click RIGHT!</h3></br>
+    <p> Connect with your neighbors, and find some new friends for both you and your dog!
+      Not all dogs play the same, and dog parks can be overwelming! This is a great
+      way to meet dogs that play nice with your four legged friend! Get stuck at work late sometimes? Have to leave town? No need to keep spending
+      all that money on dog walkers you barely know! Find dogs that get along, and neighbors you trust
+      so you can exchange dog walks and overnight stays! </p>
+    <h3> Not feeling it - click <span class="red">LEFT</span>. Think there is potential - click <span class="green">RIGHT</span>!</h3></br>
       <img src='/assets/example.png' id="example"/>
         <h4>Careful once you click no, there is no getting that match back!</br>
           Click the Matches link on the Nav bar to see the lucky dogs!
